--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -200,6 +200,8 @@
             // Handle logout button click
             $("#logoutBtn").click(function() {
                 localStorage.removeItem('metamaskId');
+                window.location.href = '';
+
             });
         });
     </script>
