--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,11 +15,12 @@
 
 <nav class="navbar navbar-expand-lg">
     <div class="container">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="/">
             Festava Live
         </a>
+        
 
-        <a href="ticket.html" class="btn custom-btn d-lg-none ms-auto me-4">Buy Ticket</a>
+        <a href="buy-tickets" class="btn custom-btn d-lg-none ms-auto me-4">Buy Ticket</a>
 
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,31 +30,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav align-items-lg-center ms-auto me-lg-5">
                 <li class="nav-item">
-                    <a class="nav-link click-scroll" href="#section_1">Home</a>
+                    <a class="nav-link click-scroll" href="/">Home</a>
                 </li>
-
                 <li class="nav-item">
-                    <a class="nav-link click-scroll" href="#section_2">About</a>
+                    <a class="nav-link click-scroll" href="/">MetaMask Info</a>
                 </li>
-
+                
+        
                 <li class="nav-item">
-                    <a class="nav-link click-scroll" href="#section_3">Artists</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link click-scroll" href="#section_4">Schedule</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link click-scroll" href="#section_5">Pricing</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link click-scroll" href="#section_6">Contact</a>
+                    <a class="nav-link" href="event">Up Comming Events</a>
                 </li>
             </ul>
 
-            <a href="ticket.html" class="btn custom-btn d-lg-block d-none">Buy Ticket</a>
+            <a href="buy-tickets" class="btn custom-btn d-lg-block d-none">Buy Ticket</a>
         </div>
     </div>
 </nav>
